<resources>
    <string name="app_name">Minimalrecords</string>
    <string name="app_nameStudio">Studio</string>
    <string name="s1">Мы, Роман и Вероника Якименко, являемся создателями и владельцами домашней студии Mini-mal Records. Деятельность студии в основном направлена на выполнение семейных и индивидуальных заказов. Работа в студии одновременно и профессиональная по воплощению, и любительская по атмосфере.

Название студии появилось неслучайно, оно связано с небольшими размерами студийного помещения, в которм расположены вся аппаратура, техника и большинство инструментов.

Так, как мы оба музыканты, стало очевидно, что нам для занятий творчеством и для освоения новых навыков нужна отдельная комната или помещение. Поэтому мы решили воплотить свою идею, и в процессе ремонта мы выделили небольшое отдельное помещение квартиры под студию. Историю появления студии вы можете увидеть в соответствующем разделе.

Ниже предлагаем ознакомиться с услугами студии.</string>
    <string name="s2">Еще можно сказать «микши́рование» —
        это этап создания из отдельных записанных треков или из разных звуковых
        дорожек конечной (свелённой) записи. А ткэде это этап звукозаписи, следующий за созданием фонограммы, заключающийся в отборе и редактировании
        исходных записанных треков, объединении их в единый проект и обработке эффектами.</string>
    <string name="s3">В применении к работе с музыкальными треками — это процесс, в ходе которого из исходных материалов создаётся экземпляр продукта, который служит эталонным образцом для тиражирования и называется мастер-копией.
        Это доработка трека до илеального состояния, до конечного результата</string>
    <string name="s4">Для заказчика — это музыкальное сопровождение песни (минус), доработка и сочинение новых партий инструментов, а также определение выбор жанра будущей конечной композиции. Проще говоря, суть аранжировки —
        это написание музыки, которая звучит в финальном варианте произведения</string>
    <string name="s5">В нашем исполнении -- это создание копии подлинника или вашего варианта инструментального сопровождения песни. В итоге вы получаете полноценное музыкальное сопровождение
        желаемой композиции в нужной тональности и с учётом индивидуальных пожиланий.</string>
    <string name="s6">В нашем случае - это работа в студии с микрофоном и наушниками для дальнейшего использования клиентом.</string>
    <string name="s7">В целом –- это процесс исправление ошибок вокалиста. Это своего рода редактирование вокала,
        такая работ может выполняться на всех этапах от аранжировки до сведения.</string>
    <string name="s8">Это доработка имеющихся фонограмм, или запись отдельных мелодий,
        создание мелодических ходов и инструментала на живых или электронных инструментах</string>
    <string name="s9"></string>
    <string name="s10"></string>
    <string name="s11"></string>
    <string name="a1">О нас</string>
    <string name="a2">Сведение</string>
    <string name="a3">Мастеринг</string>
    <string name="a4">Аранжировка под ключ</string>
    <string name="a5">Написание минусов</string>
    <string name="a7">Запись вокала</string>
    <string name="a11">Обработка вокала</string>
    <string name="a123">Запись инструментов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="review">Отправить отзыв</string>
</resources>