<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_644832420_14_krot_info_p_foni_dlya_saitov_14"
    tools:context=".AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a1"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="564dp"
                android:text="@string/s1"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a2"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="48sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s2"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a3"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s3"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a4"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s4"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a5"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s5"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a7"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView918"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s6"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a11"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s7"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a123"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textColorHighlight="#00BCD4"
                android:textColorHint="#00BCD4"
                android:textColorLink="#00BCD4"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s8"
                android:textColor="#FF9800"
                android:textColorHighlight="#FF9800"
                android:textColorHint="#FF9800"
                android:textColorLink="#FF9800"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>